--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -11,10 +11,8 @@ spring:
     # Maximum number of active connections that can be allocated from this pool at the same time.
         max-active: 4
     # Validate the connection before borrowing it from the pool.
-        test-on-borrow: true  
-    # Validate the connection before borrowing it from the pool.
-    #    test-on-borrow: true
-    #    validationQuery: SELECT 1
+        test-on-borrow: true
+        validationQuery: SELECT 1
     jpa:
         hibernate:
             ddl-auto: update
