--- a/pom.xml
+++ b/pom.xml
@@ -153,6 +153,12 @@
             <version>RELEASE</version>
         </dependency>
         
+        <dependency>  
+            <groupId>org.primefaces.themes</groupId>  
+            <artifactId>flick</artifactId>  
+            <version>1.0.10</version>  
+        </dependency>
+        
         <dependency>
             <groupId>org.postgresql</groupId>
             <artifactId>postgresql</artifactId>
@@ -307,7 +313,13 @@
             <id>bintray</id>
             <name>bintray</name>
             <url>http://jcenter.bintray.com</url>
-        </repository>
+        </repository>   
+        <repository>  
+            <id>prime-repo</id>  
+            <name>PrimeFaces Maven Repository</name>  
+            <url>http://repository.primefaces.org</url>  
+        </repository>    
     </repositories>
+    
            
 </project>
